--- a/package.json
+++ b/package.json
@@ -10,10 +10,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@nextui-org/button": "^2.0.31",
+    "@nextui-org/react": "^2.3.6",
+    "@nextui-org/theme": "^2.2.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.2.4",
+    "heroicons": "^2.1.3",
+    "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "radix-ui": "^1.0.1",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
