--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@next/env": "^14.2.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
