--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/react": "^2.3.6",
     "@nextui-org/theme": "^2.2.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.44.4",
     "axios": "^1.6.8",
