--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.4",
     "@heroicons/react": "^2.1.3",
     "@nextui-org/button": "^2.0.31",
     "@nextui-org/react": "^2.3.6",
