--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.4",
     "@heroicons/react": "^2.1.3",
-    "@nextui-org/button": "^2.0.31",
-    "@nextui-org/react": "^2.3.6",
-    "@nextui-org/theme": "^2.2.3",
+    "@nextui-org/button": "^2.0.37",
+    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/system": "^2.2.5",
+    "@nextui-org/theme": "^2.2.9",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.44.4",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.1.7",
+    "embla-carousel-react": "^8.1.7",
     "framer-motion": "^11.2.4",
     "heroicons": "^2.1.3",
     "lucide-react": "^0.378.0",
