--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@clerk/nextjs": "^5.2.4",
     "@heroicons/react": "^2.1.3",
     "@nextui-org/button": "^2.0.37",
-    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/link": "^2.0.34",
+    "@nextui-org/navbar": "^2.0.36",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@supabase/supabase-js": "^2.44.4",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -31,7 +35,7 @@
     "framer-motion": "^11.2.4",
     "heroicons": "^2.1.3",
     "lucide-react": "^0.378.0",
-    "next": "14.2.3",
+    "next": "14.2.5",
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -49,7 +53,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "prettier": "3.2.5",
